--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="./script.js"></script>
+  <title>Etch a Sketch</title>
 </head>
 <body>
-  
+  <div id="wrapper" class="wrapper">
+    <div id="lateral-menu" class="lateral-menu">
+      <h2>MENU</h2>
+      <div id="btns-area" class="btns-area"></div>
+    </div>
+    <div id="playable-area" class="playable-area">
+      <h1 id="title-sketch" class="title-sketch">Etch a Sketch</h1>
+      <div id="grid-container" class="grid-container"></div>
+    </div>
+  </div>
 </body>
 </html>
