--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <script src="./script.js"></script>
+  <script src="./script.js" defer></script>
   <title>Etch a Sketch</title>
 </head>
 <body>
@@ -16,7 +16,9 @@
     </div>
     <div id="playable-area" class="playable-area">
       <h1 id="title-sketch" class="title-sketch">Etch a Sketch</h1>
-      <div id="grid-container" class="grid-container"></div>
+      <div id="grid-container" class="grid-container">
+        
+      </div>
     </div>
   </div>
 </body>
