add color change and grid size via variable

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div id="wrapper" class="wrapper">
     <div id="lateral-menu" class="lateral-menu">
       <h2>MENU</h2>
+      <input id="color-picker" type="color" value="#000000">
       <div id="btns-area" class="btns-area"></div>
     </div>
     <div id="playable-area" class="playable-area">
