branching to test-changes

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id="lateral-menu" class="lateral-menu">
       <h2>MENU</h2>
       <input id="color-picker" type="color" value="#000000">
+      <input type="number" name="grid-size-selector" id="grid-size-selector" value="16" min="10" max="64" step="1" />
       <div id="btns-area" class="btns-area"></div>
     </div>
     <div id="playable-area" class="playable-area">
