add an eraser btn

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <h2>MENU</h2>
       <div id="btns-area" class="btns-area">
         <input id="color-picker" type="color" value="#000000">
+        <button class="eraser" id="eraser">Eraser</button>
         <div class="size-area" id="size-area">
           <label for="grid-size-selector">Choose a size for the grid</label>
           <input type="range" name="grid-size-selector" id="grid-size-selector" value="16" min="10" max="64" step="1" />
