--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <label id="count-size" for="grid-size-selector">16</label>
         </div>
       </div>
+      <div class="display-mode" id="display-mode">Currently using: <span id="mode">COLOR</span></div>
     </div>
     <div id="playable-area" class="playable-area">
       <h1 id="title-sketch" class="title-sketch">Etch a Sketch</h1>
